--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -161,7 +160,7 @@
 
     <div class="container">
         <!-- All Mods Butonu -->
-        <div class="all-mods-button">All Mods</div>
+        <a href="https://bnmods9.github.io/mods.html" class="all-mods-button">All Mods</a>
 
         <div class="grid-container">
             <div class="grid-item">Add-ons</div>
@@ -171,14 +170,14 @@
         </div>
 
         <div class="social-links">
-            <!-- Discord logo (no link yet) -->
-            <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/1735988200073_orig.png" alt="Discord Logo">
+            <!-- Discord logo -->
+            <a href="https://discord.gg/QhHmRujprk"><img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/1735988200073_orig.png" alt="Discord Logo"></a>
 
-            <!-- YouTube logo (no link yet) -->
-            <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/1735988111224_orig.png" alt="YouTube Logo">
+            <!-- YouTube logo -->
+            <a href="https://youtube.com/@bncraft.1?si=tNO8FJ_KOdEiMSaE"><img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/1735988111224_orig.png" alt="YouTube Logo"></a>
 
-            <!-- Tiktok logo (no link yet) -->
-            <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/1735988057347_orig.png" alt="Tiktok Logo">
+            <!-- Tiktok logo -->
+            <a href="https://www.tiktok.com/@bn.craft4?_t=ZS-8spPCe73WNd&_r=1"><img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/1735988057347_orig.png" alt="Tiktok Logo"></a>
         </div>
     </div>
     
