--- a/mods.html
+++ b/mods.html
@@ -299,3 +299,55 @@
     </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BNcraft Home Page</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #001F2F;
+            color: #FFFFFF;
+            height: 200vh; /* Test için uzun sayfa */
+        }
+
+        /* Sabit logo butonu */
+        .home-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            width: 60px; /* Buton boyutu */
+            height: 60px;
+            background-color: #FFFFFF;
+            border: 2px solid #00FFFF;
+            border-radius: 15%; /* Düz köşeler için */
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .home-button:hover {
+            transform: scale(1.2);
+            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.5);
+        }
+
+        .home-button img {
+            width: 55px; /* Logoyu daha büyük yaptım */
+            height: 55px;
+            object-fit: contain; /* Logo düzgün şekilde ortalansın */
+        }
+    </style>
+</head>
+<body>
+    <!-- Sabit Logo -->
+    <div class="home-button" onclick="window.open('https://bnmods9.github.io/', '_blank')">
+        <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/1736220856038_orig.png" alt="Home">
+    </div>
+</body>
+</html>
