--- a/index.html
+++ b/index.html
@@ -10,38 +10,49 @@
             margin: 0;
             font-family: Arial, sans-serif;
             color: #FFFFFF;
-            text-align: center;
         }
 
         header {
-            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             background-color: #002F3F;
+            padding: 20px;
             border-bottom: 2px solid #00FFFF;
         }
 
         header img {
             max-width: 150px;
             height: auto;
+            margin-bottom: 10px;
         }
 
         .title {
-            font-size: 24px;
+            font-size: 28px;
             font-weight: bold;
-            margin-top: 10px;
         }
 
-        /* Arama Çubuğu */
+        .content-wrapper {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #002F3F;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+
         .search-container {
-            margin-top: 20px;
-            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 15px;
         }
 
         .search-bar {
-            width: 300px;
+            width: 400px;
             padding: 10px;
-            background-color: #002F3F;
+            background-color: #001F2F;
             border: 2px solid #00FFFF;
-            border-radius: 8px;
+            border-radius: 5px;
             color: #FFFFFF;
             font-size: 16px;
             outline: none;
@@ -51,65 +62,37 @@
             color: #00FFFF;
         }
 
-        .search-bar:focus {
-            border-color: #00CED1;
-            background-color: #001F2F;
-        }
-
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            min-height: 80vh;
-            padding: 20px;
-        }
-
         .all-mods-button {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 160px;
-            height: 50px;
+            display: inline-block;
+            background-color: #00FFFF;
+            color: #002F3F;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 12px 24px;
+            border-radius: 8px;
+            text-decoration: none;
+            text-align: center;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        .all-mods-button:hover {
+            background-color: #00CED1;
+            transform: scale(1.05);
+        }
+
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 20px;
+            margin: 20px 0;
+        }
+
+        .grid-item {
             background-color: #00FFFF;
             color: #002F3F;
             font-size: 16px;
             font-weight: bold;
-            text-align: center;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: transform 0.3s, background-color 0.3s;
-            margin-bottom: 20px;
-            margin-top: 20px;
-            text-decoration: none;
-        }
-
-        .all-mods-button:hover {
-            transform: scale(1.05);
-            background-color: #00CED1;
-        }
-
-        .grid-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-            background-color: #002F3F;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-        }
-
-        .grid-item {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 120px;
-            height: 50px;
-            background-color: #00FFFF;
-            color: #002F3F;
-            font-size: 14px;
-            font-weight: bold;
+            padding: 15px;
             text-align: center;
             border-radius: 8px;
             cursor: pointer;
@@ -117,50 +100,30 @@
         }
 
         .grid-item:hover {
-            transform: scale(1.05);
-            background-color: #00CED1;
-        }
-
-        .social-links {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            margin-top: 20px;
-        }
-
-        .social-links a img {
-            width: 40px;
-            height: 40px;
-            cursor: pointer;
-            transition: transform 0.3s;
-        }
-
-        .social-links a img:hover {
             transform: scale(1.1);
+            background-color: #00CED1;
         }
 
         .discord-banner {
             display: flex;
-            justify-content: center;
             align-items: center;
-            gap: 10px;
-            background-color: #002F3F;
+            gap: 15px;
             padding: 15px;
+            background-color: #001F2F;
             border: 2px solid #00FFFF;
             border-radius: 10px;
-            margin-top: 20px;
         }
 
         .discord-banner img {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
         }
 
         .discord-banner a {
-            text-decoration: none;
-            font-size: 16px;
-            color: #00FFFF;
+            font-size: 18px;
             font-weight: bold;
+            color: #00FFFF;
+            text-decoration: none;
         }
 
         .discord-banner a span {
@@ -168,11 +131,29 @@
         }
 
         footer {
+            text-align: center;
+            padding: 10px;
             background-color: #002F3F;
             color: #00FFFF;
-            padding: 10px;
-            font-size: 12px;
+            font-size: 14px;
             border-top: 2px solid #00FFFF;
+        }
+
+        .social-links {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .social-links a img {
+            width: 40px;
+            height: 40px;
+            transition: transform 0.3s;
+        }
+
+        .social-links a img:hover {
+            transform: scale(1.1);
         }
     </style>
 </head>
@@ -182,15 +163,18 @@
         <div class="title">Welcome to BNcraft</div>
     </header>
 
-    <!-- Arama Çubuğu -->
-    <div class="search-container">
-        <input type="text" class="search-bar" placeholder="Search...">
-    </div>
+    <div class="content-wrapper">
+        <!-- Arama Çubuğu -->
+        <div class="search-container">
+            <input type="text" class="search-bar" placeholder="Search...">
+        </div>
 
-    <div class="container">
         <!-- All Mods Butonu -->
-        <a href="https://bnmods9.github.io/mods.html" class="all-mods-button">All Mods</a>
+        <div style="text-align: center; margin-bottom: 20px;">
+            <a href="https://bnmods9.github.io/mods.html" class="all-mods-button">All Mods</a>
+        </div>
 
+        <!-- Kategori Listesi -->
         <div class="grid-container">
             <div class="grid-item">Add-ons</div>
             <div class="grid-item">Templates</div>
@@ -206,6 +190,7 @@
             </a>
         </div>
 
+        <!-- Sosyal Medya Bağlantıları -->
         <div class="social-links">
             <a href="https://discord.gg/feU8DERptY" target="_blank">
                 <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/1735988200073_orig.png" alt="Discord Logo">
@@ -218,9 +203,9 @@
             </a>
         </div>
     </div>
-    
+
     <footer>
-        &copy; 2025 Your Website. All rights reserved.
+        &copy; 2025 BNcraft. All rights reserved.
     </footer>
 </body>
 </html>
