--- a/mods.html
+++ b/mods.html
@@ -131,27 +131,26 @@
     </div>
 
     <div class="mods-container" id="mods-container">
-        <!-- Modlar burada listelenecek -->
         <div class="mod-item" data-name="Actions & Stuff (Texture Pack)">
-            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/actionsandstuff-thumbnail-0-copy-800x450_orig.jpg" alt="Actions & Stuff">
+            <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/ddae3b71-5292-4f86-8b09-f6a119d78ef5/actionsandstuff_Thumbnail_0.jpg" alt="Actions & Stuff">
             <div class="mod-title">Actions & Stuff (Texture Pack)</div>
             <a href="https://lootdest.org/s?nc4bVpwI" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="Villagers++ (Add-On)">
-            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/villagers-thumbnail-0-orig-copy-800x450_orig.jpg" alt="Villagers++">
+            <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/e7c672fd-3a8e-42f9-83ad-2cf8bb83af88/Villagers_Thumbnail_0.jpg" alt="Villagers++">
             <div class="mod-title">Villagers++ (Add-On)</div>
             <a href="https://lootdest.org/s?1AHUxjHP" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="Realistic Biomes (Add-On)">
-            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/realisticbiomes-thumbnail-0_orig.jpg" alt="Realistic Biomes">
+            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/a22c83c4-484f-4fad-b37f-b4a651048df2/realisticbiomes_Thumbnail_0.jpg" alt="Realistic Biomes">
             <div class="mod-title">Realistic Biomes (Add-On)</div>
             <a href="https://loot-link.com/s?HXrawDnI" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="Animations+ (Add-On)">
-            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/a-thumbnail-0_orig.jpg" alt="Animations+">
+            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/4496a1cc-1b3e-4bd5-8b03-d29a4bb25029/A_Thumbnail_0.jpg" alt="Animations+">
             <div class="mod-title">Animations+ (Add-On)</div>
             <a href="https://loot-link.com/s?UUrpUAgN" class="download-button" target="_blank">Download</a>
         </div>
@@ -163,25 +162,25 @@
         </div>
 
         <div class="mod-item" data-name="ANIME JUTSU (Add-On)">
-            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/animejutsu-thumbnail-0_orig.jpg" alt="ANIME JUTSU">
+            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/2836457b-ce73-41b0-a21b-c7a7c0dce3b1/ANIMEJUTSU_Thumbnail_0.jpg" alt="ANIME JUTSU">
             <div class="mod-title">ANIME JUTSU (Add-On)</div>
             <a href="https://lootdest.org/s?dDtQ8MzI" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="BLASTERS (Add-On)">
-            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/blasters-thumbnail-0_orig.jpg" alt="BLASTERS">
+            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/696b5658-cc90-4169-9871-fea16126910b/Blasters_Thumbnail_0.jpg" alt="BLASTERS">
             <div class="mod-title">BLASTERS (Add-On)</div>
             <a href="https://loot-link.com/s?f9TgA6US" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="BOSSES+ (Add-On)">
-            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/bpl-thumbnail-0_orig.jpg" alt="BOSSES+">
+            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/8029ca57-bea8-4eb5-9362-3ea1a07eb59a/BPL_Thumbnail_0.jpg" alt="BOSSES+">
             <div class="mod-title">BOSSES+ (Add-On)</div>
             <a href="https://lootdest.org/s?NVsmppYI" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="CAVE DWELLER (Add-On)">
-            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/cavedweller-thumbnail-0_orig.jpg" alt="CAVE DWELLER">
+            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/ea4548c8-6aa1-469f-aac3-918d0f82ac60/CaveDweller_Thumbnail_0.jpg" alt="CAVE DWELLER">
             <div class="mod-title">CAVE DWELLER (Add-On)</div>
             <a href="https://lootdest.org/s?z0fqRAhk" class="download-button" target="_blank">Download</a>
         </div>
@@ -275,79 +274,17 @@
             <div class="mod-title">Pumpkin Halloween (Texture Pack)</div>
             <a href="https://lootdest.org/s?1xuoDioX" class="download-button" target="_blank">Download</a>
         </div>
-    </div>
 
-    <footer>
-        &copy; 2025 BNcraft. All rights reserved.
-    </footer>
+        <div class="mod-item" data-name="SECRET DOORS (Add-On)">
+            <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/img-20250106-wa0023_orig.jpg" alt="SECRET DOORS">
+            <div class="mod-title">SECRET DOORS (Add-On)</div>
+            <a href="https://loot-link.com/s?cu7iK11q" class="download-button" target="_blank">Download</a>
+        </div>
 
-    <script>
-        function filterMods() {
-            const searchInput = document.getElementById('search-bar').value.toLowerCase();
-            const modsContainer = document.getElementById('mods-container');
-            const mods = modsContainer.getElementsByClassName('mod-item');
+        <div class="mod-item" data-name="Megalodon (Template)">
+            <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/img-20250106-wa0029_orig.jpg" alt="Megalodon">
+            <div class="mod-title">Megalodon (Template)</div>
+            <a href="https://lootdest.org/s?i8RSJAC0" class="download-button" target="_blank">Download</a>
+        </div>
 
-            for (let i = 0; i < mods.length; i++) {
-                const modName = mods[i].getAttribute('data-name').toLowerCase();
-                if (modName.includes(searchInput)) {
-                    mods[i].style.display = '';
-                } else {
-                    mods[i].style.display = 'none';
-                }
-            }
-        }
-    </script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BNcraft Home Page</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #001F2F;
-            color: #FFFFFF;
-            height: 200vh; /* Test için uzun sayfa */
-        }
-
-        /* Sabit logo butonu */
-        .home-button {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            width: 60px; /* Buton boyutu */
-            height: 60px;
-            background-color: #FFFFFF;
-            border: 2px solid #00FFFF;
-            border-radius: 15%; /* Düz köşeler için */
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .home-button:hover {
-            transform: scale(1.2);
-            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.5);
-        }
-
-        .home-button img {
-            width: 55px; /* Logoyu daha büyük yaptım */
-            height: 55px;
-            object-fit: contain; /* Logo düzgün şekilde ortalansın */
-        }
-    </style>
-</head>
-<body>
-    <!-- Sabit Logo -->
-    <div class="home-button" onclick="window.open('https://bnmods9.github.io/', '_blank')">
-        <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/1736220856038_orig.png" alt="Home">
-    </div>
-</body>
-</html>
+        <div class="mod
