--- a/mods.html
+++ b/mods.html
@@ -132,27 +132,39 @@
 
     <div class="mods-container" id="mods-container">
         <div class="mod-item" data-name="Actions & Stuff (Texture Pack)">
-            <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/ddae3b71-5292-4f86-8b09-f6a119d78ef5/actionsandstuff_Thumbnail_0.jpg" alt="Actions & Stuff">
+            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/actionsandstuff-thumbnail-0-copy-800x450_orig.jpg" alt="Actions & Stuff">
             <div class="mod-title">Actions & Stuff (Texture Pack)</div>
             <a href="https://lootdest.org/s?nc4bVpwI" class="download-button" target="_blank">Download</a>
         </div>
 
+       <div class="mod-item" data-name="GAMER MOBS UNITE (Skin Pack)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/1cc9d5f8-b244-4aec-a98f-c6c0331a87ab/GAMERMOBSUNITE_Thumbnail_0.jpg" alt="GAMER MOBS UNITE (Skin Pack)">
+    <div class="mod-title">GAMER MOBS UNITE (Skin Pack)</div>
+    <a href="https://lootdest.org/s?nih7oZOv" class="download-button" target="_blank">Download</a>
+</div> 
+
         <div class="mod-item" data-name="Villagers++ (Add-On)">
-            <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/e7c672fd-3a8e-42f9-83ad-2cf8bb83af88/Villagers_Thumbnail_0.jpg" alt="Villagers++">
+            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/villagers-thumbnail-0-orig-copy-800x450_orig.jpg" alt="Villagers++">
             <div class="mod-title">Villagers++ (Add-On)</div>
             <a href="https://lootdest.org/s?1AHUxjHP" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="Realistic Biomes (Add-On)">
-            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/a22c83c4-484f-4fad-b37f-b4a651048df2/realisticbiomes_Thumbnail_0.jpg" alt="Realistic Biomes">
+            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/realisticbiomes-thumbnail-0_orig.jpg" alt="Realistic Biomes">
             <div class="mod-title">Realistic Biomes (Add-On)</div>
             <a href="https://loot-link.com/s?HXrawDnI" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="Animations+ (Add-On)">
-            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/4496a1cc-1b3e-4bd5-8b03-d29a4bb25029/A_Thumbnail_0.jpg" alt="Animations+">
+            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/a-thumbnail-0_orig.jpg" alt="Animations+">
             <div class="mod-title">Animations+ (Add-On)</div>
             <a href="https://loot-link.com/s?UUrpUAgN" class="download-button" target="_blank">Download</a>
+        </div>
+
+        <div class="mod-item" data-name="Amethyst Expansion (Add-On)">
+            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/c712562c-ef36-44ff-9df2-76c11aea2c08/AE_Thumbnail_0.jpg" alt="Amethyst Expansion (Add-On)">
+            <div class="mod-title">Amethyst Expansion (Add-On)</div>
+            <a href="https://loot-link.com/s?PnTrFmsG" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="Radium's Armament (Add-On)">
@@ -162,25 +174,25 @@
         </div>
 
         <div class="mod-item" data-name="ANIME JUTSU (Add-On)">
-            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/2836457b-ce73-41b0-a21b-c7a7c0dce3b1/ANIMEJUTSU_Thumbnail_0.jpg" alt="ANIME JUTSU">
+            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/animejutsu-thumbnail-0_orig.jpg" alt="ANIME JUTSU">
             <div class="mod-title">ANIME JUTSU (Add-On)</div>
             <a href="https://lootdest.org/s?dDtQ8MzI" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="BLASTERS (Add-On)">
-            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/696b5658-cc90-4169-9871-fea16126910b/Blasters_Thumbnail_0.jpg" alt="BLASTERS">
+            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/blasters-thumbnail-0_orig.jpg" alt="BLASTERS">
             <div class="mod-title">BLASTERS (Add-On)</div>
             <a href="https://loot-link.com/s?f9TgA6US" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="BOSSES+ (Add-On)">
-            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/8029ca57-bea8-4eb5-9362-3ea1a07eb59a/BPL_Thumbnail_0.jpg" alt="BOSSES+">
+            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/bpl-thumbnail-0_orig.jpg" alt="BOSSES+">
             <div class="mod-title">BOSSES+ (Add-On)</div>
             <a href="https://lootdest.org/s?NVsmppYI" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="CAVE DWELLER (Add-On)">
-            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/ea4548c8-6aa1-469f-aac3-918d0f82ac60/CaveDweller_Thumbnail_0.jpg" alt="CAVE DWELLER">
+            <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/cavedweller-thumbnail-0_orig.jpg" alt="CAVE DWELLER">
             <div class="mod-title">CAVE DWELLER (Add-On)</div>
             <a href="https://lootdest.org/s?z0fqRAhk" class="download-button" target="_blank">Download</a>
         </div>
@@ -197,10 +209,28 @@
             <a href="https://loot-link.com/s?S4BSgKgq" class="download-button" target="_blank">Download</a>
         </div>
 
+        <div class="mod-item" data-name="RealismCraft (Template)">
+            <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/img-20250106-wa0049_orig.jpg" alt="RealismCraft (Template)">
+            <div class="mod-title">RealismCraft (Template)</div>
+            <a href="https://loot-link.com/s?ct7edLXP" class="download-button" target="_blank">Download</a>
+        </div>
+
         <div class="mod-item" data-name="Towers and Dungeons (Add-On)">
             <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/towersanddungeons-thumbnail-0_orig.jpg" alt="Towers and Dungeons">
             <div class="mod-title">Towers and Dungeons (Add-On)</div>
             <a href="https://lootdest.org/s?i0Ea7Z3q" class="download-button" target="_blank">Download</a>
+        </div>
+
+        <div class="mod-item" data-name="SUPERHERO MODE (Template)">
+            <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/58ed2dd3-ad29-47e1-914b-ae6de7fe9ff5/SUPERHEROMODE_Thumbnail_0.jpg" alt="SUPERHERO MODE (Template)">
+            <div class="mod-title">SUPERHERO MODE (Template)</div>
+            <a href="https://loot-link.com/s?pOelbSUQ" class="download-button" target="_blank">Download</a>
+        </div>
+
+        <div class="mod-item" data-name="HORROR SURVIVAL (Add-On)">
+            <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/302089be-7eb9-4294-8a80-a8a6778adb57/Survival_But_Horror_Thumbnail_0.jpg" alt="HORROR SURVIVAL (Add-On)">
+            <div class="mod-title">HORROR SURVIVAL (Add-On)</div>
+            <a href="https://loot-link.com/s?qdCVrCDv" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="Black x Gold (Skin Pack)">
@@ -227,6 +257,12 @@
             <a href="https://loot-link.com/s?jQfipBsx" class="download-button" target="_blank">Download</a>
         </div>
 
+        <div class="mod-item" data-name="Megalodon (Template)">
+            <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/img-20250106-wa0029_orig.jpg" alt="Megalodon (Template)">
+            <div class="mod-title">Megalodon (Template)</div>
+            <a href="https://lootdest.org/s?i8RSJAC0" class="download-button" target="_blank">Download</a>
+        </div>
+
         <div class="mod-item" data-name="Dragons (Add-On)">
             <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/dragons-thumbnail-0_orig.jpg" alt="Dragons">
             <div class="mod-title">Dragons (Add-On)</div>
@@ -237,6 +273,12 @@
             <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/explorerswaystones-thumbnail-0-copy-800x450_orig.jpg" alt="THE EXPLORER'S WAYSTONES">
             <div class="mod-title">THE EXPLORER'S WAYSTONES (Add-On)</div>
             <a href="https://loot-link.com/s?WmxkoEuF" class="download-button" target="_blank">Download</a>
+        </div>
+
+        <div class="mod-item" data-name="DRAGONS EVOLVE (Template)">
+            <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/img-20250104-wa0042_orig.jpg" alt="DRAGONS EVOLVE (Template)">
+            <div class="mod-title">DRAGONS EVOLVE (Template)</div>
+            <a href="https://loot-link.com/s?PmQoEhTa" class="download-button" target="_blank">Download</a>
         </div>
 
         <div class="mod-item" data-name="ULTRA Mob Totems (Add-On)">
@@ -269,22 +311,38 @@
             <a href="https://lootdest.org/s?njPb1tqv" class="download-button" target="_blank">Download</a>
         </div>
 
+        <div class="mod-item" data-name="SECRET DOORS (Add-On)">
+            <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/img-20250106-wa0023_orig.jpg" alt="SECRET DOORS (Add-On)">
+            <div class="mod-title">SECRET DOORS (Add-On)</div>
+            <a href="https://loot-link.com/s?cu7iK11q" class="download-button" target="_blank">Download</a>
+        </div>
+
         <div class="mod-item" data-name="Pumpkin Halloween (Texture Pack)">
             <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/img-20241228-wa0173_orig.jpg" alt="Pumpkin Halloween">
             <div class="mod-title">Pumpkin Halloween (Texture Pack)</div>
             <a href="https://lootdest.org/s?1xuoDioX" class="download-button" target="_blank">Download</a>
         </div>
+    </div>
 
-        <div class="mod-item" data-name="SECRET DOORS (Add-On)">
-            <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/img-20250106-wa0023_orig.jpg" alt="SECRET DOORS">
-            <div class="mod-title">SECRET DOORS (Add-On)</div>
-            <a href="https://loot-link.com/s?cu7iK11q" class="download-button" target="_blank">Download</a>
-        </div>
+    <footer>
+        &copy; 2025 BNcraft. All rights reserved.
+    </footer>
 
-        <div class="mod-item" data-name="Megalodon (Template)">
-            <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/img-20250106-wa0029_orig.jpg" alt="Megalodon">
-            <div class="mod-title">Megalodon (Template)</div>
-            <a href="https://lootdest.org/s?i8RSJAC0" class="download-button" target="_blank">Download</a>
-        </div>
+    <script>
+        function filterMods() {
+            const searchInput = document.getElementById('search-bar').value.toLowerCase();
+            const modsContainer = document.getElementById('mods-container');
+            const mods = modsContainer.getElementsByClassName('mod-item');
 
-        <div class="mod
+            for (let i = 0; i < mods.length; i++) {
+                const modName = mods[i].getAttribute('data-name').toLowerCase();
+                if (modName.includes(searchInput)) {
+                    mods[i].style.display = '';
+                } else {
+                    mods[i].style.display = 'none';
+                }
+            }
+        }
+    </script>
+</body>
+</html>
