--- a/mods.html
+++ b/mods.html
@@ -203,6 +203,12 @@
             <a href="https://lootdest.org/s?dsakyDLk" class="download-button" target="_blank">Download</a>
         </div>
 
+                <div class="mod-item" data-name="Skibidi Toilet Raids (Add-On)">
+            <img src="https://d1wzdj81h1hubn.cloudfront.net/resources/42816341d366cef4.jpeg" alt="Skibidi Toilet Raids">
+            <div class="mod-title">Skibidi Toilet Raids (Add-On)</div>
+            <a href="https://lootdest.org/s?dsakyDLk" class="download-button" target="_blank">Download</a>
+                </div>
+
         <div class="mod-item" data-name="Smartphones (Add-On)">
             <img src="https://bnmodsland.weebly.com/uploads/1/5/1/5/151513783/screenshot-2024-12-21-12-30-55-903-com-miui-gallery-orig-copy-800x450_orig.png" alt="Smartphones">
             <div class="mod-title">Smartphones (Add-On)</div>
