--- a/mods.html
+++ b/mods.html
@@ -347,27 +347,31 @@
             <a href="https://loot-link.com/s?EJAPyTIW" class="download-button" target="_blank">Download</a>
         </div>
         
-    </div>
+        <div class="mod-item" data-name="Cute Vibes Texture Pack (Texture Pack)">
+            <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/5be1147b-99af-4bd0-8106-e016c4a8d7e3/CuteVibes_thumbnail_0.jpg" alt="Cute Vibes Texture Pack">
+            <div class="mod-title">Cute Vibes Texture Pack (Texture Pack)</div>
+            <a href="https://loot-link.com/s?THotYkYC" class="download-button" target="_blank">Download</a>
+        </div>
 
-    <footer>
-        &copy; 2025 BNcraft. All rights reserved.
-    </footer>
+        <div class="mod-item" data-name="Tinkers' Construct (Add-On)">
+            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/a1d2aa26-42f6-405b-ad53-76b2b872c5df/Tinkers_Construct-Thumbnail_0.jpg" alt="Tinkers' Construct">
+            <div class="mod-title">Tinkers' Construct (Add-On)</div>
+            <a href="https://loot-link.com/s?a37uSpo9" class="download-button" target="_blank">Download</a>
+        </div>
 
-    <script>
-        function filterMods() {
-            const searchInput = document.getElementById('search-bar').value.toLowerCase();
-            const modsContainer = document.getElementById('mods-container');
-            const mods = modsContainer.getElementsByClassName('mod-item');
+        <div class="mod-item" data-name="PLAYER TRAILS (Add-On)">
+            <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/f88f3dc4-e90c-4769-88d8-c6689d839a9e/PT_Thumbnail_0.jpg" alt="PLAYER TRAILS">
+            <div class="mod-title">PLAYER TRAILS (Add-On)</div>
+            <a href="https://loot-link.com/s?a7RcVxb2" class="download-button" target="_blank">Download</a>
+        </div>
 
-            for (let i = 0; i < mods.length; i++) {
-                const modName = mods[i].getAttribute('data-name').toLowerCase();
-                if (modName.includes(searchInput)) {
-                    mods[i].style.display = '';
-                } else {
-                    mods[i].style.display = 'none';
-                }
-            }
-        }
-    </script>
-</body>
-</html>
+        <div class="mod-item" data-name="Black and Pink Frenzy (Skin Pack)">
+            <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/e569037f-cd9a-4125-9f6c-df4084c15add/BlackandPinkFrenzy_Thumbnail_0.jpg" alt="Black and Pink Frenzy">
+            <div class="mod-title">Black and Pink Frenzy (Skin Pack)</div>
+            <a href="https://loot-link.com/s?Etli5IqQ" class="download-button" target="_blank">Download</a>
+        </div>
+
+        <div class="mod-item" data-name="Core Armor (Skin Pack)">
+            <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/7e82c37c-c759-4f1e-a605-990c14dbba46/CoreArmor_Thumbnail_0.jpg" alt="Core Armor">
+            <div class="mod-title">Core Armor (Skin Pack)</div>
+            <a href="https://loot-link.com/s?d2u4SAnO" class="download-button" target="_
