--- a/mods.html
+++ b/mods.html
@@ -436,6 +436,36 @@
     <div class="mod-title">Ghast Expansion (Add-On)</div>
     <a href="https://loot-link.com/s?kYnEtIqV" class="download-button" target="_blank">Download</a>
 </div>
+
+<div class="mod-item" data-name="Noble PVP 16X (Texture Pack)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/6332d00d-7630-43fb-87f8-f7676d121038/NPVPTP_thumbnail_0.jpg" alt="Noble PVP 16X">
+    <div class="mod-title">Noble PVP 16X (Texture Pack)</div>
+    <a href="https://loot-link.com/s?YRrO18zu" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Hacker Texture Pack (Texture Pack)">
+    <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/4426d0ca-068d-493f-83e9-343ec86b8b7b/HckrTxtrPck_thumbnail_0.jpg" alt="Hacker Texture Pack">
+    <div class="mod-title">Hacker Texture Pack (Texture Pack)</div>
+    <a href="https://loot-link.com/s?qfL0b4kF" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Demon Weapons (Template)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/a3a8e2b2-4936-4ae5-a3f1-2e307ff1c4d5/DemonWeapons_Thumbnail_0.jpg" alt="Demon Weapons">
+    <div class="mod-title">Demon Weapons (Template)</div>
+    <a href="https://loot-link.com/s?ivunluxT" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Dream Kawaii (Texture Pack)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/7d99ce20-2ebc-4082-b5aa-527fd0b74db2/Cute_32x_Thumbnail_0.jpg" alt="Dream Kawaii">
+    <div class="mod-title">Dream Kawaii (Texture Pack)</div>
+    <a href="https://loot-link.com/s?rlagzLvB" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="blue archive 2V (Add-On)">
+    <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/picsart-25-01-11-05-56-26-044-copy-800x450_orig.jpg" alt="blue archive 2V">
+    <div class="mod-title">blue archive 2V (Add-On)</div>
+    <a href="https://loot-link.com/s?1jjJlvAL" class="download-button" target="_blank">Download</a>
+</div>
         
                 <div class="mod-item" data-name="Super Tools (Template)">
             <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/6e8abcc5-8c16-4bc5-acc9-602d384f2fde/SuperTools_Thumbnail_0.jpg" alt="Super Tools">
