--- a/mods.html
+++ b/mods.html
@@ -461,6 +461,78 @@
     <a href="https://loot-link.com/s?rlagzLvB" class="download-button" target="_blank">Download</a>
 </div>
 
+<div class="mod-item" data-name="Ink Horror (Skin Pack)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/81107ea7-1329-4a11-8104-d0474f059488/Ink_Horror_Thumbnail_0.jpg" alt="Ink Horror">
+    <div class="mod-title">Ink Horror (Skin Pack)</div>
+    <a href="https://loot-link.com/s?SsdMNoBv" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Vehicles Pro (Add-On)">
+    <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/344ff0bc-11d6-45d0-abe9-d905bb7a85cd/vehiclespro_Thumbnail_0.jpg" alt="Vehicles Pro">
+    <div class="mod-title">Vehicles Pro (Add-On)</div>
+    <a href="https://loot-link.com/s?fSL2kweq" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Storage++ (Add-On)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/2107dfb8-d47c-442d-93c1-001d6ccb7f8a/Storage_Thumbnail_0.jpg" alt="Storage++">
+    <div class="mod-title">Storage++ (Add-On)</div>
+    <a href="https://lootdest.org/s?XHaflBQH" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Seasons Realism (Texture Pack)">
+    <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/0f8b41a1-767d-4b85-85e3-c4f2b3dca43d/FourSeasons_thumbnail_0.jpg" alt="Seasons Realism">
+    <div class="mod-title">Seasons Realism (Texture Pack)</div>
+    <a href="https://loot-link.com/s?BJL29cPI" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Rainbow Monster Friends (Template)">
+    <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/39ec0e9b-c480-4c03-890f-77533261b79b/rainbowmonsterfriends_thumbnail_0.jpg" alt="Rainbow Monster Friends">
+    <div class="mod-title">Rainbow Monster Friends (Template)</div>
+    <a href="https://lootdest.org/s?oE3YRNa9" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="PVP PRO (Texture Pack)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/edf35ccd-30cb-4c14-8862-14622fbf21f5/pvp_Thumbnail_0.jpg" alt="PVP PRO">
+    <div class="mod-title">PVP PRO (Texture Pack)</div>
+    <a href="https://lootdest.org/s?6pF9I736" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Mountable Pets! (Add-On)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/3ebb7d05-ffc0-413b-8001-74c949b0ab91/MP_Thumbnail_0.jpg" alt="Mountable Pets!">
+    <div class="mod-title">Mountable Pets! (Add-On)</div>
+    <a href="https://loot-link.com/s?BU5AqKPi" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Moana 2 (Template)">
+    <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/f247a0b7-7075-4093-be35-428cd9658df8/Moana2_Thumbnail.jpg" alt="Moana 2">
+    <div class="mod-title">Moana 2 (Template)</div>
+    <a href="https://lootdest.org/s?6u4u9vPJ" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Mage Mania (Add-On)">
+    <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/4ab5c8fb-158e-471a-a541-901c21fecd03/WitchesNWizards_Thumbnail_0.jpg" alt="Mage Mania">
+    <div class="mod-title">Mage Mania (Add-On)</div>
+    <a href="https://loot-link.com/s?VGhgrnM2" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Incredible Horses (Template)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-title-b63a0803d3653643-20ca2/ea057c8f-e23d-42fc-93da-635e1152c42b/MoreHorses2_Thumbnail_0.jpg" alt="Incredible Horses">
+    <div class="mod-title">Incredible Horses (Template)</div>
+    <a href="https://lootdest.org/s?8yFeUEK2" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Immersion: Chicago (Template)">
+    <img src="https://xforgeassets002.xboxlive.com/pf-title-b63a0803d3653643-20ca2/9840a213-d825-4b4a-8aa3-eee3cf64831f/Chicago_thumbnail_0.jpg" alt="Immersion: Chicago">
+    <div class="mod-title">Immersion: Chicago (Template)</div>
+    <a href="https://loot-link.com/s?PgRAIzuG" class="download-button" target="_blank">Download</a>
+</div>
+
+<div class="mod-item" data-name="Essentials (Add-On)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/6ae9dc2c-4e89-424a-8a59-d9acaca7c275/essentials_Thumbnail_0.jpg" alt="Essentials">
+    <div class="mod-title">Essentials (Add-On)</div>
+    <a href="https://loot-link.com/s?z9c4zy1D" class="download-button" target="_blank">Download</a>
+</div>
+
 <div class="mod-item" data-name="blue archive 2V (Add-On)">
     <img src="https://bncraft9.weebly.com/uploads/1/5/1/8/151839741/picsart-25-01-11-05-56-26-044-copy-800x450_orig.jpg" alt="blue archive 2V">
     <div class="mod-title">blue archive 2V (Add-On)</div>
