--- a/mods.html
+++ b/mods.html
@@ -607,6 +607,20 @@
     <a href="https://lootdest.org/s?y5Mmqd4W" class="download-button" target="_blank">Download</a>
     <div class="mod-size" style="color: #a3c9e2; font-weight: bold; font-size: 1.1em; margin-top: 10px;">Size: 82.95 MB</div>
 </div>
+
+<div class="mod-item" data-name="My Cozy Cottage Life (Template)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/e08dcd6d-72f2-4cae-a8a4-6ed6caae99cf/mycozycottagelife_Thumbnail_0.jpg" alt="My Cozy Cottage Life">
+    <div class="mod-title">My Cozy Cottage Life (Template)</div>
+    <a href="https://lootdest.org/s?dIm1dnMX" class="download-button" target="_blank">Download</a>
+    <div class="mod-size" style="color: #a3c9e2; font-weight: bold; font-size: 1.1em; margin-top: 10px;">Size: 107.81 MB</div>
+</div>
+
+<div class="mod-item" data-name="RPG Skills (Add-Ons)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/ef82677e-507f-4dea-9489-dc70258f7a5f/RPG_Skills_Thumbnail_0.jpg" alt="RPG Skills">
+    <div class="mod-title">RPG Skills (Add-Ons)</div>
+    <a href="https://lootdest.org/s?xtkTvTmy" class="download-button" target="_blank">Download</a>
+    <div class="mod-size" style="color: #a3c9e2; font-weight: bold; font-size: 1.1em; margin-top: 10px;">Size: 500.9 KB</div>
+</div>
         
     </div>
 
