--- a/mods.html
+++ b/mods.html
@@ -629,6 +629,27 @@
     <div class="mod-size" style="color: #a3c9e2; font-weight: bold; font-size: 1.1em; margin-top: 10px;">Size: 12.74 MB</div>
 </div>
         
+<div class="mod-item" data-name="Boba Tea Town (Template)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/356d7d0b-c1f0-41c3-a979-c6bad914443d/BobaTeaTown_Thumbnail_0.jpg" alt="Boba Tea Town">
+    <div class="mod-title">Boba Tea Town (Template)</div>
+    <a href="https://lootdest.org/s?RmZ80Gx9" class="download-button" target="_blank">Download</a>
+    <div class="mod-size" style="color: #a3c9e2; font-weight: bold; font-size: 1.1em; margin-top: 10px;">Size: 121.37 MB</div>
+</div>
+
+<div class="mod-item" data-name="Pink Dream">
+    <img src="https://xforgeassets002.xboxlive.com/pf-namespace-b63a0803d3653643/660b2df0-3c3a-450d-bfc9-a3153befed1d/PinkMood_Thumbnail_0.jpg" alt="Pink Dream">
+    <div class="mod-title">Pink Dream</div>
+    <a href="https://loot-link.com/s?3bpoSBc2" class="download-button" target="_blank">Download</a>
+    <div class="mod-size" style="color: #a3c9e2; font-weight: bold; font-size: 1.1em; margin-top: 10px;">Size: 34.67 KB</div>
+</div>
+
+<div class="mod-item" data-name="AsianCraft Building">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/c752512a-dbfd-4f74-aa9f-c5f66c85987a/AsianCraftBuildingAddOn_Thumbnail_0.jpg" alt="AsianCraft Building">
+    <div class="mod-title">AsianCraft Building</div>
+    <a href="https://loot-link.com/s?q83YlsoB" class="download-button" target="_blank">Download</a>
+    <div class="mod-size" style="color: #a3c9e2; font-weight: bold; font-size: 1.1em; margin-top: 10px;">Size: 2.06 MB</div>
+</div>
+        
     </div>
 
     <footer>
