--- a/mods.html
+++ b/mods.html
@@ -649,6 +649,13 @@
     <a href="https://loot-link.com/s?q83YlsoB" class="download-button" target="_blank">Download</a>
     <div class="mod-size" style="color: #a3c9e2; font-weight: bold; font-size: 1.1em; margin-top: 10px;">Size: 2.06 MB</div>
 </div>
+
+        <div class="mod-item" data-name="Biomes + Realism (Add-On)">
+    <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/9be97d1f-0d1c-4fbf-ae5a-5d576c223fa9/RealismeBiome_Thumbnail_0.jpg" alt="Biomes + Realism">
+    <div class="mod-title">Biomes + Realism (Add-On)</div>
+    <a href="https://lootdest.org/s?ikR02TYr" class="download-button" target="_blank">Download</a>
+    <div class="mod-size" style="color: #a3c9e2; font-weight: bold; font-size: 1.1em; margin-top: 10px;">Size: 51.65 MB</div>
+        </div>
         
     </div>
 
